# rust-ising-simulation

./: Cargo.toml  LICENSE  README.md
notebooks/: visualize_ising_model.ipynb
src/: main.rs
