[package]
name = "rust-ising-simulation"
version = "0.1.0"
authors = ["Tsuyoshi Tatsukawa <ts.tatsukawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
num-traits = "0.2"
rand = "0.7.3"

